--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "99-template",
   "version": "0.1.0",
+  "homepage": "https://baksnn.github.io/Todo-App-version-2.0/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
