--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Todo-App",
+  "name": "99-template",
   "version": "0.1.0",
   "homepage": "https://baksnn.github.io/Todo-App-version-2.0/",
   "private": true,
